♻ Add Gradle archive version

--- a/java-examples/app/build.gradle
+++ b/java-examples/app/build.gradle
@@ -10,6 +10,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
 }
 
+jar {
+    archiveBaseName = 'hello'
+    archiveVersion = '1.0.0'
+}
+
 application {
     mainClass = 'hello.App'
 }
