📃 Add README and move Java examples

--- a/java-examples/build.gradle
+++ b/java-examples/build.gradle
@@ -13,6 +13,9 @@ dependencies {
 jar {
     archiveBaseName = 'hello'
     archiveVersion = '1.0.0'
+    manifest {
+        attributes["Main-Class"] = "hello.App"
+    }
 }
 
 application {
