--- a/java-examples/src/main/java/hello/BUILD
+++ b/java-examples/src/main/java/hello/BUILD
@@ -1,5 +1,6 @@
 java_binary(
     name = "hello",
     srcs = glob(["*.java"]),
+    main_class = "hello.App",
     visibility = ["//src/test:__subpackages__"],
 )
