⚡ Gradle - document cache example

--- a/java-examples/build.gradle
+++ b/java-examples/build.gradle
@@ -21,3 +21,11 @@ jar {
 application {
     mainClass = 'hello.App'
 }
+
+tasks.register("backup", Copy) {
+    from(sourceSets.main.output)
+    into(project.layout.buildDirectory.dir("backup"))
+    outputs.cacheIf {
+        true
+    }
+}
